[style] Fix checkbox isn't aligned left
Sets the size of the checkbox to 20x20 px for good measure.

--- a/static/style.css
+++ b/static/style.css
@@ -210,6 +210,13 @@ section.footer .version {
 
 	}
 
+	.parameters input[type="checkbox"] {
+
+		width: 20px;
+		height: 20px;
+
+	}
+
 } /* @supports (display: grid) */
 
 .maintainer {
